# ks-cli

./: .gitignore  pyproject.toml  salt.key
src/chaturbate_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cli/: main.py
src/cli/arguments/: index.py
src/cli/commands/: command_strategy.py  create_strategy.py  credential_item_strategy.py  exec_command.py  gui_strategy.py  item_strategy.py  item_strategy_factory.py  list_strategy.py  search_strategy.py  text_item_strategy.py
src/cli/gui/: keystore_app.py  sidebar_app.py
src/cli/keystore/: keystore_manager.py
src/cli/tui/: tui_list.py
src/keystore_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ks/: main.py
src/ks/commands/: create_strategy.py  credential_item_strategy.py  exec_command.py  gui_strategy.py  item_strategy.py  list_strategy.py  search_strategy.py  text_item_strategy.py
src/ks/gui/: css.py  keylist_app.py  keystore_app.py  sidebar_app.py
src/ks/tui/: tui_list.py
