[project]
name = "keystore-cli"
version = "0.1.0"  # This field is mandatory
description = "A Keystore CLI"
dependencies = [
    "PyInquirer",
    "rich",
    "textual",
]


[project.scripts]
ks = "cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]